# nimeigen

./: .gitignore  README.md  nimeigen.nimble  quick_reference.org
examples/pyeigs/: CMakeLists.txt  eigs.nim  pyeigs.cpp  test.py
src/: nimeigen.nim
src/nimeigen/: eigentype.nim  matrix.nim  matrix_accessors.nim  matrix_logic.nim  matrix_math.nim  matrix_operators.nim  sparsematrix.nim  sparsematrix_operators.nim  stdcomplex.nim
src/nimeigen/sci/: ode.nim
src/nimeigen/sci/ode/: base.nim  common.nim  rk.nim  solve_ivp.nim
tests/: test_complex.nim  test_matrix.nim  test_ode.nim  test_sparsematrix.nim  tests.nim
